# SO3-Complementary-Filter

./: CMakeLists.txt  README.md  package.xml
include/estimator/: compfilter.h
include/ros/: cf_ros.h
launch/estimator/: estimator_launch.py  estimator_launch_nobag.py
params/: params.yaml
scripts/: apriltag_checker.py  correction_parser_and_plotter.py  correction_parser_and_plotter_base.py  correction_parser_and_plotter_rover.py  mocap2ublox_2.py  ros2bag_parser_and_plotter.py
src/estimator/: compfilter.cpp
src/ros/: cf_node.cpp  cf_ros.cpp  cf_ros_callback.cpp  cf_ros_init.cpp  utils.cpp
