<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so3_cf</name>
  <version>0.0.0</version>
  <description>A complementary filter that estimates Pitch and Roll on SO3
                if an IMU with gyro and accel measurements. Based on the
                filter found here: https://ieeexplore.ieee.org/document/4608934</description>
  <maintainer email="a.jordan6955@gmail.com">boat-landing</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ublox_read_2</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
